Fix whitespace issue in email correspondence component

--- a/app/styles/components/_email-correspondence.scss
+++ b/app/styles/components/_email-correspondence.scss
@@ -14,4 +14,8 @@
   .pagination {
     margin-top: 10px;
   }
+
+  .sent-at {
+    white-space: nowrap;
+  }
 }
